- Replace new line breaks with spaces on input