@@ -1,0 +1,5 @@
+{
+  "name": "Images",
+
+  "script": "/interface/scripted/starcustomchat/plugins/images/images.lua"
+}
