@@ -1,1 +1,1 @@
-["mainchat", "autohide", "colors", "afk", "voicechat"]
+["mainchat", "images", "autohide", "colors", "afk", "voicechat"]
