@@ -1,1 +1,2 @@
 - Replace new line breaks with spaces on input
+- Introduce image messages
